[workspace]
members = [
    "destiny-engine",
    "destiny-helpers",
    "destiny-types",
    "destiny-python",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["<Husky> <husky.robot.dog@gmail.com>"]
description = "天命量化库"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/wealth-discovery/destiny"
readme = "README.md"

[profile.release]
codegen-units = 1
debug = false
lto = true
strip = true
opt-level = "z"
panic = 'abort'
overflow-checks = false
debug-assertions = false
incremental = false

[workspace.dependencies]
destiny-engine = { path = "./destiny-engine" }
destiny-helpers = { path = "./destiny-helpers" }
destiny-types = { path = "./destiny-types" }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["local-time", "json"] }
chrono = { version = "0.4" }
once_cell = { version = "1" }
rayon = { version = "1" }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
async-trait = { version = "0.1" }
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }
homedir = { version = "0.3" }
polars = { version = "0.46", default-features = false, features = [
    "lazy",
    "describe",
    "dtype-datetime",
    "dtype-date",
    "performant",
    "nightly",
    "cse",
] }
derive_builder = { version = "0.20" }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "sqlite",
    "derive",
    "macros",
    "chrono",
] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
strum = { version = "0.26", features = ["derive"] }
csv-async = { version = "1.3", features = ["tokio"] }
async_zip = { version = "0.0.17", features = ["full"] }
parking_lot = { version = "0.12" }
nu-ansi-term = { version = "0.50" }
rust_decimal = { version = "1.36" }
rust_decimal_macros = { version = "1.36" }
pyo3 = { version = "0.23", features = ["full"] }
