[package]
name = "destiny-engine"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
destiny-helpers = { workspace = true }
destiny-types = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
