[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "wealth-discovery-destiny"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "readme"]
dependencies = ["pandas==2.2.3", "numpy==1.26.4"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "destiny.destiny"
