[package]
name = "destiny-types"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
destiny-helpers = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
rayon = { workspace = true }
