[package]
name = "destiny-types"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
destiny-helpers = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
rayon = { workspace = true }
rust_decimal = { workspace = true }
pyo3 = { workspace = true, optional = true }

[features]
default = []
python = ["dep:pyo3", "destiny-helpers/python"]
